--- a/src/gui/rss/rsssettingsdlg.ui
+++ b/src/gui/rss/rsssettingsdlg.ui
@@ -34,7 +34,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="../icons.qrc">:/icons/oxygen/application-rss+xml.png</pixmap>
+        <pixmap resource="../../icons.qrc">:/icons/oxygen/application-rss+xml.png</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -119,7 +119,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../icons.qrc"/>
+  <include location="../../icons.qrc"/>
  </resources>
  <connections>
   <connection>
